# oss-maintainer-kit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  omk.toml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: configuration.md  examples.md  openai-codex-for-oss-application.md  roadmap.md  rule-reference.md  sample-report.md  scoring.md  usage.md
docs/superpowers/plans/: 2026-05-31-oss-maintainer-kit.md
docs/superpowers/specs/: 2026-05-31-oss-maintainer-kit-design.md
examples/minimal-python-project/: README.md  pyproject.toml
src/oss_maintainer_kit/: __init__.py  badge.py  cli.py  config.py  models.py  report.py  rules.py  scanner.py  scoring.py  templates.py
tests/: test_badge_audit.py  test_cli.py  test_cli_config.py  test_config.py  test_packaging.py  test_report.py  test_rules_scoring.py  test_scanner.py  test_templates.py
